--- a/ConAuction3/Views/CustomerDlg.xaml
+++ b/ConAuction3/Views/CustomerDlg.xaml
@@ -16,7 +16,7 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 		<Label Grid.Row="0" Content="Id" />
-		<TextBox Grid.Row="1" Name="Id" IsReadOnly="true" MinWidth="250" />
+		<Label Grid.Row="1" Name="Id" MinWidth="250" />
 		<Label Grid.Row="2" Content="Namn" />
 		<TextBox Grid.Row="3" Name="CustomerName"  MinWidth="250" />
 		<Label Grid.Row="4" Content="Mobilnummer" />
