--- a/ConAuction3/Views/MainWindow.xaml
+++ b/ConAuction3/Views/MainWindow.xaml
@@ -36,6 +36,8 @@
         <DockPanel DockPanel.Dock="Top" Background="#FBD800">
             <Image DockPanel.Dock="Left" Source="{StaticResource LinconLogoSmall}" MaxHeight="80"  Margin="30,0,30,0" />
             <Label DockPanel.Dock="Left" FontSize="28" FontWeight="Bold" Padding="30" >ConAuction V3.0</Label>
+            <Label DockPanel.Dock="Right" Content="{Binding VersionStr}" Width="70" />
+            
             <WrapPanel DockPanel.Dock="Right" Orientation="Vertical"
                        Visibility="{Binding ModeIsReceiving, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <CheckBox  TabIndex="18" IsTabStop="True" VerticalAlignment="Center" Margin="10,5,10,5"
@@ -46,13 +48,10 @@
                 <CheckBox  TabIndex="18" IsTabStop="True" VerticalAlignment="Center" Margin="10,5,10,5"
                            IsChecked="{Binding Path=LabelPage3}" >Sida 3</CheckBox>
             </WrapPanel>
-           
+
             <ComboBox DockPanel.Dock="Right" Text="Välj mode" MaxHeight="40" MaxWidth="150" ItemsSource="{Binding OpEnumList}"  IsEditable="False"
 					  FontSize="20" FontWeight="Bold" SelectedValue="{Binding CurrentMode}" Margin="5" Padding="4" TabIndex="1"
-					  DisplayMemberPath="ValueString" SelectedValuePath="ValueMode" SelectedIndex="0" RenderTransformOrigin="0.498,0.603">
-
-            </ComboBox>
-
+					  DisplayMemberPath="ValueString" SelectedValuePath="ValueMode" SelectedIndex="0" RenderTransformOrigin="0.498,0.603" />
         </DockPanel>
         <DockPanel>
             <Grid DockPanel.Dock ="Bottom">
