--- a/ConAuction3/Views/ProductDisplayDlg.xaml
+++ b/ConAuction3/Views/ProductDisplayDlg.xaml
@@ -41,7 +41,7 @@
                 <Label Content="{Binding ProductType}" FontSize="50" FontWeight="Bold" Margin="50" ></Label>
             </DockPanel>
             <Label DockPanel.Dock="Top" HorizontalAlignment="Left" Content="{Binding ProductName}" FontSize="50" FontWeight="Bold" Margin="50" ></Label>
-            <TextBox DockPanel.Dock="Top" HorizontalAlignment="Left" BorderThickness="0" Text="{Binding ProductDescription}" TextWrapping="Wrap" Background="#FBD800"  FontSize="40" Margin="50"></TextBox>
+            <TextBox DockPanel.Dock="Top" HorizontalAlignment="Left" BorderThickness="0" IsReadOnly="True" Text="{Binding ProductDescription, Mode=OneWay}" TextWrapping="Wrap" Background="#FBD800"  FontSize="40" Margin="50"></TextBox>
         </DockPanel>
     </Grid>
 </Window>
