--- a/ConAuction3/Views/PromptDialog.xaml
+++ b/ConAuction3/Views/PromptDialog.xaml
@@ -10,10 +10,20 @@
              MinHeight="100"
              WindowStyle="SingleBorderWindow"
              ResizeMode="CanMinimize">
-    <StackPanel Margin="5">
+
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/PresentationFramework.Luna;component/themes/Luna.Metallic.xaml"/>
+                <ResourceDictionary Source="../Resources/ResourceDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
+    <StackPanel Margin="5"  Background="#FBD800">
         <TextBlock Name="txtQuestion" Margin="5"/>
         <TextBox Name="txtResponse" Margin="5"/>
-        <PasswordBox Name="txtPasswordResponse" />
+        <PasswordBox Name="txtPasswordResponse" Margin="5"/>
         <StackPanel Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
             <Button Content="_Ok" IsDefault="True" Margin="5" Name="btnOk" Click="ButtonOk_Click" />
             <Button Content="_Cancel" IsCancel="True" Margin="5" Name="btnCancel" Click="ButtonCancel_Click" />
