--- a/ConAuction3/Views/MainWindow.xaml
+++ b/ConAuction3/Views/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:converters="clr-namespace:ConAuction3.Converters"
+        xmlns:system="clr-namespace:System;assembly=mscorlib"
         Title="ConAuction" Height="900" Width="1400">
 
 
@@ -17,6 +18,8 @@
             <converters:BoolToIntConverter x:Key="BooleanToInt50Converter" TrueValue="55" FalseValue="0" />
             <converters:BoolToIntConverter x:Key="BooleanToInt50Inverter" TrueValue="0" FalseValue="50" />
             <converters:BoolToBoolConverter x:Key="BooleanInverter" TrueValue="False" FalseValue="True" />
+            <converters:BoolToColorBrushConverter x:Key="BoolToColorBrushConverter" />
+            
         </ResourceDictionary>
     </Window.Resources>
 
@@ -232,9 +235,10 @@
                               MouseDoubleClick="Control_OnMouseDoubleClickProduct" KeyboardNavigation.TabNavigation="Contained" IsTabStop="False"
                               SelectionChanged="ListView_OnSelectionChanged">
                         <ListView.ItemContainerStyle>
-                            <Style>
+                            <Style TargetType="ListViewItem">
                                 <Setter Property="KeyboardNavigation.IsTabStop" Value="False" />
-                            </Style>
+                                <Setter Property="Background" Value="{Binding LabelPrinted, Converter={StaticResource BoolToColorBrushConverter}, ConverterParameter=White;Red;0.2, Mode=OneWay}" />
+                           </Style>
                         </ListView.ItemContainerStyle>
 
                         <ListView.View>
